// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtSlider Snap render AtSlider -- props activeColor 1`] = `
<view
  class="at-slider"
>
  <view
    class="at-slider__inner"
  >
    <slider
      activecolor="red"
      backgroundcolor="#e9e9e9"
      blockcolor="#ffffff"
      blocksize="28"
      disabled="false"
      max="100"
      min="0"
      step="1"
      value="0"
    />
  </view>
  <!---->
</view>
`;

exports[`AtSlider Snap render AtSlider -- props backgroundColor 1`] = `
<view
  class="at-slider"
>
  <view
    class="at-slider__inner"
  >
    <slider
      activecolor="#6190e8"
      backgroundcolor="red"
      blockcolor="#ffffff"
      blocksize="28"
      disabled="false"
      max="100"
      min="0"
      step="1"
      value="0"
    />
  </view>
  <!---->
</view>
`;

exports[`AtSlider Snap render AtSlider -- props blockColor 1`] = `
<view
  class="at-slider"
>
  <view
    class="at-slider__inner"
  >
    <slider
      activecolor="#6190e8"
      backgroundcolor="#e9e9e9"
      blockcolor="red"
      blocksize="28"
      disabled="false"
      max="100"
      min="0"
      step="1"
      value="0"
    />
  </view>
  <!---->
</view>
`;

exports[`AtSlider Snap render AtSlider -- props blockSize 1`] = `
<view
  class="at-slider"
>
  <view
    class="at-slider__inner"
  >
    <slider
      activecolor="#6190e8"
      backgroundcolor="#e9e9e9"
      blockcolor="#ffffff"
      blocksize="24"
      disabled="false"
      max="100"
      min="0"
      step="1"
      value="0"
    />
  </view>
  <!---->
</view>
`;

exports[`AtSlider Snap render AtSlider -- props disabled 1`] = `
<view
  class="at-slider at-slider--disabled"
>
  <view
    class="at-slider__inner"
  >
    <slider
      activecolor="#6190e8"
      backgroundcolor="#e9e9e9"
      blockcolor="#ffffff"
      blocksize="28"
      disabled="true"
      max="100"
      min="0"
      step="1"
      value="0"
    />
  </view>
  <!---->
</view>
`;

exports[`AtSlider Snap render AtSlider -- props max 1`] = `
<view
  class="at-slider"
>
  <view
    class="at-slider__inner"
  >
    <slider
      activecolor="#6190e8"
      backgroundcolor="#e9e9e9"
      blockcolor="#ffffff"
      blocksize="28"
      disabled="false"
      max="200"
      min="0"
      step="1"
      value="0"
    />
  </view>
  <!---->
</view>
`;

exports[`AtSlider Snap render AtSlider -- props min 1`] = `
<view
  class="at-slider"
>
  <view
    class="at-slider__inner"
  >
    <slider
      activecolor="#6190e8"
      backgroundcolor="#e9e9e9"
      blockcolor="#ffffff"
      blocksize="28"
      disabled="false"
      max="100"
      min="50"
      step="1"
      value="50"
    />
  </view>
  <!---->
</view>
`;

exports[`AtSlider Snap render AtSlider -- props showValue 1`] = `
<view
  class="at-slider"
>
  <view
    class="at-slider__inner"
  >
    <slider
      activecolor="#6190e8"
      backgroundcolor="#e9e9e9"
      blockcolor="#ffffff"
      blocksize="28"
      disabled="false"
      max="100"
      min="0"
      step="1"
      value="0"
    />
  </view>
  <view
    class="at-slider__text"
  >
    0
  </view>
</view>
`;

exports[`AtSlider Snap render AtSlider -- props step 1`] = `
<view
  class="at-slider"
>
  <view
    class="at-slider__inner"
  >
    <slider
      activecolor="#6190e8"
      backgroundcolor="#e9e9e9"
      blockcolor="#ffffff"
      blocksize="28"
      disabled="false"
      max="100"
      min="0"
      step="1"
      value="0"
    />
  </view>
  <!---->
</view>
`;

exports[`AtSlider Snap render AtSlider -- props value 1`] = `
<view
  class="at-slider"
>
  <view
    class="at-slider__inner"
  >
    <slider
      activecolor="#6190e8"
      backgroundcolor="#e9e9e9"
      blockcolor="#ffffff"
      blocksize="28"
      disabled="false"
      max="100"
      min="0"
      step="1"
      value="50"
    />
  </view>
  <!---->
</view>
`;

exports[`AtSlider Snap render initial AtSlider 1`] = `
<view
  class="at-slider"
>
  <view
    class="at-slider__inner"
  >
    <slider
      activecolor="#6190e8"
      backgroundcolor="#e9e9e9"
      blockcolor="#ffffff"
      blocksize="28"
      disabled="false"
      max="100"
      min="0"
      step="1"
      value="0"
    />
  </view>
  <!---->
</view>
`;
